# project-tycho

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
acceptance-tests/: README.md  docker-compose.yml  pyproject.toml  run.sh  test_acceptance.py
acceptance-tests/data/: observatory-data.json
blog/: Dockerfile  README.md  pyproject.toml
blog/blog/: __main__.py  app.py  cli.py  config.py  generator.py  models.py
blog/blog/routes/: build.py  posts.py
blog/blog/static/: style.css
blog/blog/templates/: base.html.j2  index.html.j2  post.html.j2
blog/tests/: test_api.py
observatory/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
observatory/observatory/: __init__.py  __main__.py  analyzer.py  config.py  database.py  models.py  probes.py  scanner.py  scheduler.py  targets.py
observatory/targets/: default_targets.yaml
observatory/tests/: test_database.py  test_scanner_capabilities.py  test_scheduler.py
pcap-analyser/: README.md  pyproject.toml
pcap-analyser/src/tls_pcap_analyzer/: __init__.py  cli.py  models.py  parser.py  pqc_registry.py
pcap-analyser/tests/: __init__.py  test_parser.py
pcap-analyser/tests/fixtures/: __init__.py
researcher/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
researcher/researcher/: __init__.py  cli.py  config.py  graph.py  llm.py  models.py
researcher/researcher/connectors/: __init__.py  blog.py  observatory.py  references.py  visualiser.py
researcher/researcher/nodes/: __init__.py  blog_publish.py  workflow.py
researcher/tests/: test_blog_publish.py  test_graph_workflow.py  test_observatory_connector.py  test_reference_retriever.py  test_visualiser_connector.py
system-prompts/: blog-prompt.txt
visualiser/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
visualiser/frontend/: index.html  package-lock.json  package.json  vite.config.js
visualiser/frontend/src/: App.vue
visualiser/frontend/src/components/: CipherSuiteTable.vue  HandshakeFlow.vue  KeyShareChart.vue
visualiser/frontend/src/views/: HomeView.vue
visualiser/src/tls_visualizer/: __init__.py  app.py  models.py  observatory_store.py
visualiser/src/tls_visualizer/routes/: export.py  handshake.py  observatory.py
visualiser/src/tls_visualizer/tikz/: __init__.py  generator.py
visualiser/src/tls_visualizer/tikz/templates/: handshake_flow.tex.j2  key_share_comparison.tex.j2
visualiser/tests/: conftest.py  test_models.py  test_observatory_routes.py  test_routes.py  test_tikz.py
