[project]
name = "pqc-blog"
version = "0.1.0"
description = "Static blog service for PQC Observatory research posts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1,<9",
    "fastapi[standard]>=0.115,<1",
    "httpx>=0.27,<1",
    "jinja2>=3.1,<4",
    "markdown>=3.7,<4",
    "pydantic>=2.11,<3",
    "pydantic-settings>=2.9,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
]

[project.scripts]
blog = "blog.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["blog"]

[tool.pytest.ini_options]
pythonpath = ["."]
