[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pqc-observatory"
version = "0.1.0"
description = "PQC Observatory — scheduled TLS handshake scanner and adoption tracker"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "APScheduler>=3.10,<4",
    "PyYAML>=6.0,<7",
    "pydantic>=2.11,<3",
    "pydantic-settings>=2.9,<3",
    "click>=8.1,<9",
    "tls-pcap-analyzer",
]

[project.scripts]
observatory = "observatory.__main__:cli"

[tool.uv.sources]
tls-pcap-analyzer = { path = "../pcap-analyser", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["observatory"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
]
