[project]
name = "tls-pcap-analyzer"
version = "0.1.0"
description = "Parse pcap files to extract TLS handshake information with first-class PQC support"
readme = "README.md"
authors = [
    { name = "copilot-swe-agent[bot]", email = "198982749+Copilot@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "scapy>=2.5.0",
    "cryptography>=46.0.5",
]

[project.scripts]
tls-pcap-analyzer = "tls_pcap_analyzer.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"
