[project]
name = "pqc-researcher"
version = "0.1.0"
description = "Autonomous LangGraph research agent for PQC adoption in TLS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1,<9",
    "httpx>=0.27,<1",
    "langchain>=0.3,<0.4",
    "langchain-openai>=0.2,<0.3",
    "langgraph>=0.2,<0.3",
    "pydantic>=2.11,<3",
    "pydantic-settings>=2.9,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
]

[project.scripts]
researcher = "researcher.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["researcher"]

[tool.pytest.ini_options]
pythonpath = ["."]
